P4ADEV-2157 api for create assessments
